@startuml TagCommands
skinparam classAttributeIconSize 0
hide circle
abstract class Command {
    + {abstract} execute(notes : ArrayList<Note>, tags : List<String>, ui : UI, storage : Storage) : void
    + isExit() : boolean
}

class DeleteTagFromNoteCommand
class DeleteTagGloballyCommand
class ListTagsGlobalCommand
class ListTagsSingleNoteCommand
class NewTagCommand
class RenameTagCommand
class TagNoteCommand

DeleteTagFromNoteCommand -down-|> Command
DeleteTagGloballyCommand -down-|> Command
ListTagsSingleNoteCommand -up-|> Command
NewTagCommand -down-|> Command
RenameTagCommand -up-|> Command
TagNoteCommand -down-|> Command
ListTagsGlobalCommand -up-|> Command
@enduml